# bronze-mobile

./: .gitignore
android/: CMakeLists.txt  local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: main.cpp
android/app/src/main/res/values/: strings.xml
assets/shaders/: color.fsh  color.vsh  texture.fsh  texture.vsh
common/: application.cpp  application.h  context.cpp  context.h  game.c  game.cpp  game.h  image.cpp  image.h  opengl.h  utils.cpp  utils.h
common/assets/: fileasset.cpp  fileasset.h  image.cpp  image.h  sound.cpp  sound.h
ios/: AppDelegate.h  AppDelegate.m  AssetUtils.mm  AssetUtils.swift  SceneDelegate.h  ViewController.h  ViewController.m  ViewController.mm  idle-Bridging-Header.h  main.m
ios/Base.lproj/: Main.storyboard
ios/idle.xcodeproj/: project.pbxproj
ios/idle.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/idle.xcodeproj/project.xcworkspace/xcuserdata/zack.xcuserdatad/: UserInterfaceState.xcuserstate
ios/idle.xcodeproj/xcshareddata/xcschemes/: idle.xcscheme
ios/idle.xcodeproj/xcuserdata/zack.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios/idle.xcodeproj/xcuserdata/zack.xcuserdatad/xcschemes/: xcschememanagement.plist
lib/bronze/: actor.cpp  actor.h  application.cpp  application.h  collection.cpp  collection.h  context.cpp  context.h  event.cpp  event.h  scene.cpp  scene.h  texture.cpp  texture.h  timestep.cpp  timestep.h  utils.h
lib/bronze/assets/: image.cpp  image.h  sound.cpp  sound.h
lib/freetype/include/freetype/config/: ftmodule.h  ftoption.h
lib/openal/: alu.h
lib/openal/include/: config.h
lib/sndfile/: config.h  sndfile.h
shared/: game.cpp  game.h
